# master_robot_strage

./: .gitignore  CMakeLists.txt  README.md  package.xml
scripts/: control_state.py  pass_ball_first.py  pass_ball_second.py  pass_ball_third.py  shoot_ball_first.py  shoot_ball_second.py  shoot_ball_third.py  strage_test.py
scripts/ball_state_pkg/: find_oneball_state.py  find_twoball_state.py
scripts/cylinder_state_pkg/: find_cylinder_state.py
scripts/robot_find_pkg/: __init__.py  find_cylinder_state.py  find_line.py  find_volleyball.py  findball.py
scripts/robot_move_pkg/: .move_a_distance.py.swp  config.py  echo_state.py  go_along_circle.py  go_close_line.py  growth_curve.py  linear_move.py  low_speed_linear_move.py  move_a_distance.py  move_in_robot.py  move_to_a_point.py  move_to_home.py  old_linear_move.py  test_linear_move.py  turn_an_angular.py  var_speed_linear_move.py
scripts/robot_move_pkg/interpolation_function/: growth_curve.py  spline_config.py
scripts/robot_shovel_srv/: control_srv.py
scripts/robot_state_class/: __init__.py  first_project_state.py  second_project_state.py
scripts/robot_state_pkg/: get_robot_position.py
